--- a/packages/cli-specs/tsconfig.json
+++ b/packages/cli-specs/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "lionconfig/tsconfig",
 	"compilerOptions": {
 		"outDir": "dist",
+		"declarationDir": "dist",
 		"baseUrl": ".",
 		"rootDir": "src",
 		"paths": {
