--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 		"prepare": "lionconfig"
 	},
 	"devDependencies": {
-		"lionconfig": "latest",
-		"@types/node": "latest",
-		"typescript": "latest"
+		"@types/node": "^18.11.13",
+		"lionconfig": "^2.1.8",
+		"typescript": "^4.9.4"
 	}
 }
