--- a/packages/cli-specs/package.json
+++ b/packages/cli-specs/package.json
@@ -23,8 +23,7 @@
 		"@types/command-exists": "^1.2.0",
 		"@types/shell-quote": "^1.7.1",
 		"desm": "^1.3.0",
-		"execa": "^6.1.0",
-		"vitest": "latest"
+		"vitest": "^0.25.8"
 	},
 	"publishConfig": {
 		"directory": "dist"
@@ -33,11 +32,12 @@
 		"boxen": "^7.0.0",
 		"command-exists": "^1.2.9",
 		"deepmerge-ts": "^4.2.2",
+		"execa": "^6.1.0",
 		"got": "^12.5.3",
 		"onetime": "^6.0.0",
 		"outdent": "^0.8.0",
 		"rename-fn": "^2.1.0",
 		"shell-quote": "^1.7.4",
-		"type-fest": "^3.3.0"
+		"type-fest": "^3.4.0"
 	}
 }
