--- a/packages/cli-specs/package.json
+++ b/packages/cli-specs/package.json
@@ -17,7 +17,8 @@
 	"exports": "./src/index.ts",
 	"scripts": {
 		"build": "ts-node ./scripts/build.ts",
-		"start": "ts-node ./src/index.ts"
+		"start": "ts-node ./src/index.ts",
+		"test": "vitest run"
 	},
 	"devDependencies": {
 		"@types/command-exists": "^1.2.0",
