--- a/package.json
+++ b/package.json
@@ -1,11 +1,46 @@
 {
-	"name": "@cli-specs/monorepo",
+	"name": "cli-specs",
+	"version": "0.2.0",
+	"description": "Specifications for CLIs.",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/leondreamed/cli-specs.git"
+	},
+	"homepage": "https://github.com/leondreamed/cli-specs#readme",
+	"author": {
+		"name": "Leon Si",
+		"email": "leon@leondreamed.com",
+		"url": "https://leondreamed.com"
+	},
+	"type": "module",
+	"exports": "./src/index.ts",
 	"scripts": {
-		"prepare": "lionconfig"
+		"build": "ts-node ./scripts/build.ts",
+		"start": "ts-node ./src/index.ts",
+		"test": "vitest run"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.15",
-		"lionconfig": "^2.2.4",
-		"typescript": "^4.9.4"
+		"@types/command-exists": "^1.2.0",
+		"@types/shell-quote": "^1.7.1",
+		"desm": "^1.3.0",
+		"lionconfig": "^3.0.1",
+		"typescript": "^5.1.3",
+		"vitest": "^0.32.2"
+	},
+	"publishConfig": {
+		"directory": "dist"
+	},
+	"dependencies": {
+		"boxen": "^7.1.0",
+		"command-exists": "^1.2.9",
+		"deepmerge-ts": "^5.1.0",
+		"execa": "^7.1.1",
+		"got": "^13.0.0",
+		"onetime": "^6.0.0",
+		"outdent": "^0.8.0",
+		"rename-fn": "^2.1.0",
+		"shell-quote": "^1.8.1",
+		"type-fest": "^3.12.0"
 	}
 }
