chore: add back release script

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"scripts": {
 		"build": "ts-node ./scripts/build.ts",
 		"start": "ts-node ./src/index.ts",
+		"release": "lionp",
 		"test": "vitest run"
 	},
 	"devDependencies": {
