--- a/package.json
+++ b/package.json
@@ -21,17 +21,6 @@
 		"release": "lionp",
 		"test": "vitest run"
 	},
-	"devDependencies": {
-		"@types/command-exists": "^1.2.0",
-		"@types/shell-quote": "^1.7.1",
-		"desm": "^1.3.0",
-		"lionconfig": "^3.0.1",
-		"typescript": "^5.1.3",
-		"vitest": "^0.32.2"
-	},
-	"publishConfig": {
-		"directory": "dist"
-	},
 	"dependencies": {
 		"boxen": "^7.1.0",
 		"command-exists": "^1.2.9",
@@ -43,5 +32,17 @@
 		"rename-fn": "^2.1.0",
 		"shell-quote": "^1.8.1",
 		"type-fest": "^3.12.0"
+	},
+	"devDependencies": {
+		"@types/command-exists": "^1.2.0",
+		"@types/node": "20.5.0",
+		"@types/shell-quote": "^1.7.1",
+		"desm": "^1.3.0",
+		"lionconfig": "^3.0.1",
+		"typescript": "^5.1.3",
+		"vitest": "^0.32.2"
+	},
+	"publishConfig": {
+		"directory": "dist"
 	}
 }
